margin and with on mobile fixes

--- a/intro-component-with-signup-form-master/sass/style.scss
+++ b/intro-component-with-signup-form-master/sass/style.scss
@@ -119,9 +119,11 @@ body {
 		flex-direction: column;
 		text-align: center;
 		&__form {
+			width: 100%;
 			margin-top: 2rem;
 		}
 		&__text {
+			padding-right: 0;
 			width: 100%;
 		}
 	}
